compile_tests/multiple_one_non_signed.stderr
error: Required error message is missing
 --> compile_tests/multiple_one_non_signed.rs:7:5
  |
7 |     Third {
  |     ^^^^^
